snackbar overflow fixed

--- a/src/app/shared/components/snackbar/snackbar.component.scss
+++ b/src/app/shared/components/snackbar/snackbar.component.scss
@@ -9,6 +9,7 @@
   background-color: #fff;
   border: 1px solid #eee;
   border-radius: 6px;
+  overflow: hidden;
 }
 
 .snackbar-content {
