--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,6 +11,7 @@
 body {
   font-family: "Roboto", sans-serif;
   background: #f6f7f8;
+  overflow: hidden;
 }
 
 a {
